--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,13 +17,15 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Compile Code
-      run: mvn --batch-mode clean compile
-    - name: Run Unit Tests
-      run: mvn --batch-mode test
-    - name: Run Check Style
-      run: mvn --batch-mode checkstyle:check
+    - name: Basic Validation
+      run: mvn --batch-mode clean install
+    # - name: Compile Code
+    #   run: mvn --batch-mode clean compile
+    # - name: Run Unit Tests
+    #   run: mvn --batch-mode test
+    # - name: Run Check Style
+    #   run: mvn --batch-mode checkstyle:check
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    # # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    # - name: Update dependency graph
+    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
